# SimplexSimulations

./: .gitignore  BestResponseDynamics.cpp  BestResponseDynamics.h  CHANGELOG_POLISH.md  DynamicsFactory.cpp  DynamicsFactory.h  DynamicsKind.h  EquilibriumInspector.cpp  EquilibriumInspector.h  EquilibriumMesh.cpp  EquilibriumMesh.h  EquilibriumPathMesh.cpp  EquilibriumPathMesh.h  FEATURE_PLAN.md  ImGuiLayer.cpp  ImGuiLayer.h  LogitDynamics.cpp  LogitDynamics.h  LogitEquilibriumSweep.cpp  LogitEquilibriumSweep.h  OpggParameters.h  OpggPayoffEvaluator.cpp  OpggPayoffEvaluator.h  PointMesh.cpp  PointMesh.h  README.md  RESEARCH_WORKBENCH_IMPLEMENTATION_PLAN.md  RealTimeSimulationController.cpp  RealTimeSimulationController.h  ReplicatorDynamics.cpp  ReplicatorDynamics.h  SCIENTIFIC_VALIDATION.md  SOURCE_BASELINE.txt  ScientificFieldVisualization.cpp  ScientificFieldVisualization.h  SdlOpenGLWindow.cpp  SdlOpenGLWindow.h  SdlOpenGlWindow.cpp  SdlOpenGlWindow.h  SdlSystem.cpp  (+45 more)
tests/: CMakeLists.txt  ScientificCoreTests.cpp
